<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/user_pref_video_cat_key"
        android:title="@string/user_pref_video_cat_title">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/messages"
            app:key="@string/user_pref_sanskrit_pose_name_key"
            app:summary="@string/user_pref_sanskrit_pose_name_summary"
            app:title="@string/user_pref_sanskrit_pose_name_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/messages"
            app:key="@string/user_pref_timeline_visible_key"
            app:summary="@string/user_pref_timeline_visible_summary"
            app:title="@string/user_pref_timeline_visible_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/messages"
            app:key="@string/user_pref_countdown_timer_key"
            app:summary="@string/user_pref_countdown_timer_summary"
            app:title="@string/user_pref_countdown_timer_title" />

        <ListPreference
            android:defaultValue="bg_music_01"
            android:dialogTitle="@string/user_pref_bg_music_dlg_title"
            android:entries="@array/user_pref_bg_music_entries"
            android:entryValues="@array/user_pref_bg_music_values"
            android:key="@string/user_pref_bg_music_key"
            android:title="@string/user_pref_bg_music_title"
            app:icon="@drawable/messages"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="standard"
            android:dialogTitle="@string/user_pref_video_quality_dlg_title"
            android:entries="@array/user_pref_video_quality_entries"
            android:entryValues="@array/user_pref_video_quality_values"
            android:key="@string/user_pref_video_quality_key"
            android:title="@string/user_pref_video_quality_title"
            app:icon="@drawable/messages"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>