<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_notifications"
        android:key="@string/user_pref_master_notification_key"
        android:layout="@layout/custom_preference_master_switch"
        android:title="@string/user_pref_master_notification_title" />

    <androidx.preference.PreferenceCategory
        android:key="@string/user_pref_notification_cat_key"
        android:title="@string/user_pref_notification_cat_title">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/messages"
            android:key="@string/user_pref_reminder_alarm_key"
            android:summary="@string/user_pref_reminder_alarm_summary"
            android:title="@string/user_pref_reminder_alarm_title" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/messages"
            android:key="@string/user_pref_activity_tips_key"
            android:summary="@string/user_pref_activity_tips_summary"
            android:title="@string/user_pref_activity_tips_title" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/messages"
            android:key="@string/user_pref_goal_progress_tips_key"
            android:summary="@string/user_pref_goal_progress_tips_summary"
            android:title="@string/user_pref_goal_progress_tips_title" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/messages"
            android:key="@string/user_pref_goal_adjustment_key"
            android:summary="@string/user_pref_goal_adjustment_summary"
            android:title="@string/user_pref_goal_adjustment_title" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/messages"
            android:key="@string/user_pref_goals_completed_key"
            android:summary="@string/user_pref_goals_completed_summary"
            android:title="@string/user_pref_goals_completed_title" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/ic_new_release"
            android:key="@string/user_pref_new_release_key"
            android:summary="@string/user_pref_new_release_summary"
            android:title="@string/user_pref_new_release_title" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/ic_health_tips"
            android:key="@string/user_pref_health_tips_key"
            android:summary="@string/user_pref_health_tips_summary"
            android:title="@string/user_pref_health_tips_title" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/user_pref_master_notification_key"
            android:icon="@drawable/ic_offers"
            android:key="@string/user_pref_promotions_key"
            android:summary="@string/user_pref_promotions_summary"
            android:title="@string/user_pref_promotions_title" />

        <!--<RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/notifications_new_message_ringtone_key"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />-->

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>