<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notifications_menu"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_notifications_on"
        android:title="@string/title_notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/share_menu"
        android:icon="@drawable/ic_share_app"
        android:title="@string/title_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/user_profile_menu"
        android:title="@string/title_profile"
        app:actionLayout="@layout/view_user_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings_menu"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />

</menu>
